--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -64,6 +64,7 @@ jobs:
         uses: docker/build-push-action@471d1dc4e07e5cdedd4c2171150001c434f0b7a4 #v6.15.0
         with:
           context: .
+          file: Dockerfile.proxy
           push: true
           tags: |
             ghcr.io/vietanhduong/mullsocks-proxy:${{ needs.prepare.outputs.version_tag }}
